refactor: model config layer
